# StellaroidEarn

./: Cargo.toml  README.md
contracts/StellaroidEarn/: Cargo.toml
contracts/StellaroidEarn/src/: lib.rs  test.rs
